--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "author": "Raccoons <info@raccoons.co>",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "chai": "^4.3.7",
     "eslint": "^8.34.0",
     "npm-package-json-lint": "^6.4.0",
     "npm-run-all": "^4.1.5",
