--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,10 @@ workflows:
       - node/pack:
           requires:
             - node/test
+          matrix:
+            parameters:
+              version:
+                # https://circleci.com/developer/images/image/cimg/node
+                - '19.6.0'
+                - '18.14.0'
+                - '16.19.0'
