--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - image: cimg/node:18.14.0
     steps:
       - checkout
-      - run: npm build
+      - run: npm run build
       - run: npm pack --dry-run
 
 workflows:
