--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test": "node lib/test/EntryPoint"
   },
   "devDependencies": {
+    "@raccoons-co/cleanway": "^0.0.1",
     "@types/chai": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
