--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm pack --dry-run
-  macos/test:
+  macos-test:
     macos:
       xcode: 14.2.0
     steps:
@@ -36,4 +36,4 @@ workflows:
       - pack:
           requires:
             - node/test
-      - macos/test
+      - macos-test
