--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
       - image: cimg/node:lts
     steps:
       - checkout
-      - run: npm ci
-      - run: npm run build
+      - run: npm install
+      - run: npm test
       - run: npm pack --dry-run
   macos-test:
     macos:
@@ -18,7 +18,7 @@ jobs:
     steps:
       - node/install:
           node-version: 'lts'
-      - run: npm ci
+      - run: npm install
       - run: npm test
 
 workflows:
