--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,26 +20,18 @@ jobs:
       node-version:
          type: string
     executor: << parameters.os >>
-     steps:
-       - checkout
-       - node/install:
-          node-version: << parameters.node-version >>
+      steps:
+        - checkout
+        - node/install:
+            node-version: << parameters.node-version >>
+        - node/test
 
 workflows:
   simple:
     jobs:
-      - node/test:
-          matrix:
-            parameters:
-              version:
-                # https://circleci.com/developer/images/image/cimg/node
-                - 'current'
-                - 'lts'
-                - '16.19.1'
-                - '14.21.3'
       - pack:
           requires:
-            - node/test
+            - test
 
       - test:
           matrix:
