--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
        - checkout
        - node/install:
             node-version: << parameters.node-version >>
-       - node/test
+       - run: npm test
        - run: npm pack --dry-run
 
 workflows:
