--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
        - checkout
        - node/install:
             node-version: << parameters.node-version >>
+       - run: npm ci
        - run: npm test
        - run: npm pack --dry-run
 
