--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,13 @@ orbs:
   node: circleci/node@5.1.0
 
 executors:
-  Docker:
+  docker:
     docker:
       - image: cimg/node:lts
-  Linux:
+  linux:
     machine:
       image: ubuntu-2004:2023.02.1
-  macOS:
+  macos:
     macos:
       xcode: 14.2.0
 
@@ -36,5 +36,5 @@ workflows:
       - test:
           matrix:
             parameters:
-              os: [Docker, Linux, macOS]
-              node-version: ["19.6.1", "18.14.2", "16.9.1"]
+              os: [docker, linux, macos]
+              node-version: ["19.6.1", "18.14.2", 16.9.1]
