Fix NPM organization name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@raccoons/cleanway",
+  "name": "@raccoons-co/cleanway",
   "version": "1.0.0",
   "description": "`@Test`-driven development discipline practice.",
   "keywords": [
