--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@raccoons/cleanway",
-  "version": "1.0.0",
+  "name": "@raccoons-co/cleanway",
+  "version": "1.0.1",
   "description": "`@Test`-driven development discipline practice.",
   "keywords": [
     "TypeScript",
