--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "`@Test`-driven development discipline practice.",
   "keywords": [
     "TypeScript",
-    "Annotation",
-    "TDD"
+    "TDD",
+    "Annotations"
   ],
   "homepage": "https://github.com/raccoons-co/cleanway#readme",
   "bugs": {
@@ -43,7 +43,7 @@
     "eslint": "^8.43.0",
     "npm-package-json-lint": "^6.4.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.5"
   },
   "engines": {
     "node": ">=16.x"
