--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@raccoons-co/cleanway",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "`@Test`-driven development discipline practice.",
   "keywords": [
     "TypeScript",
-    "Annotation",
-    "TDD"
+    "TDD",
+    "Annotations"
   ],
   "homepage": "https://github.com/raccoons-co/cleanway#readme",
   "bugs": {
@@ -32,18 +32,18 @@
     "test": "node lib/test/EntryPoint"
   },
   "dependencies": {
-    "@raccoons-co/ethics": "^0.2.0",
-    "@raccoons-co/genera": "^0.0.2"
+    "@raccoons-co/ethics": "^0.2.3",
+    "@raccoons-co/genera": "^0.0.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@types/chai": "^4.3.5",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "chai": "^4.3.7",
-    "eslint": "^8.36.0",
+    "eslint": "^8.43.0",
     "npm-package-json-lint": "^6.4.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.0.2"
+    "typescript": "^5.1.5"
   },
   "engines": {
     "node": ">=16.x"
