Use `@raccoons-co/ethics` v0.3.1

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,16 @@
 {
-  "root": true,
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended"
   ],
+  "noInlineConfig": false,
   "parser": "@typescript-eslint/parser",
   "plugins": [
     "@typescript-eslint"
   ],
+  "reportUnusedDisableDirectives": true,
+  "root": true,
   "rules": {
-    "max-len": [
-      "warn",
-      120
-    ],
-    "max-lines": [
-      "warn",
-      92
-    ],
     "eol-last": [
       "warn",
       "always"
@@ -25,16 +19,26 @@
       "warn",
       4
     ],
+    "max-len": [
+      "warn",
+      120
+    ],
+    "max-lines": [
+      "warn",
+      92
+    ],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "args": "all"
+      }
+    ],
     "quotes": [
       "warn",
       "double"
     ],
     "semi": "off",
-    "@typescript-eslint/semi": "warn",
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "error"
-
-  },
-  "reportUnusedDisableDirectives": true,
-  "noInlineConfig": false
+    "@typescript-eslint/semi": "warn"
+  }
 }
